buildscript {
    ext {
        springBootVersion = '2.0.6.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'moe.leer'
version = '1.2.5-beta'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

bootJar {
    launchScript()
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-aop')
    implementation('org.springframework.boot:spring-boot-starter-security')
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
    implementation('org.jooq:joor-java-8:0.9.8')
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.9'
    runtimeOnly('mysql:mysql-connector-java')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
}
